--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           src="https://feeldreams.github.io/kadoin.png"
         />
       </div>
-      <p id="ket">Klik Kadonya!</p>
+      <p id="ket">Haii uwiw, Klik Kadonya dong 😊</p>
 
       <div class="kumpulanstiker">
         <!-- Stiker untuk Konten -->
@@ -112,7 +112,7 @@
           <p id="pesan4">Happy Birthday,</p>
           <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe</p>
           <p id="pesan6" class="gaya2">
-            Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆❤️
+            Moga panjang umur biar tiap hari bisa mikirin aku wkwk 😆❤️
           </p>
           <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
 
